add assignment links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-
+    <h1>gd431 fiona cohen</h1>
+    <ul>
+        <li><a href="resume/">resume</a></li>
+        <li><a href="poster/">poster</a></li>
+    </ul>
 </body>
 
 </html>
