add resume from sublime

--- a/resume/index.html
+++ b/resume/index.html
@@ -5,10 +5,209 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Document</title>
 </head>
 
 <body>
+
+
+    <div class="wrapper">
+        <div class="grid-wrapper">
+            <div class="section-header">
+                <h1> Fiona Cohen </h1>
+            </div>
+        </div>
+        <div class="section-dates">
+            <h5>
+                <ul>
+                    <li>2017 - present</li>
+                    <li> 2017 </li>
+                    <li> 2017</li>
+                </ul>
+            </h5>
+        </div>
+
+        <div class="grid-wrapper">
+            <div class="section-title">
+                <h2>Professional Experience</h2>
+            </div>
+
+            <div class="section-subtitle">
+                <h3>Gallery Aid, MICA Exhibitions</h3>
+            </div>
+            <div class="section-content">
+                <h4>Installed and monitored exhibitions, set lighting, prepared pieces for installation and moving,
+                    ran equipment checkout, organized exhibitions files</h4>
+            </div>
+            <div class="section-subtitle">
+                <h3> Hostess, Ichabods </h3>
+            </div>
+            <div class="section-content">
+                <h4>Greeted and sat guests, answered phone calls, organized reservations, trained new employees
+                </h4>
+            </div>
+            <div class="section-subtitle">
+                <h3> Hostess, Meme </h3>
+            </div>
+            <div class="section-content">
+                <h4> Greeted and sat guests, answered phone calls, and organized reservations </h4>
+            </div>
+        </div>
+
+        <div class="section-dates">
+            <h5>
+                <ul>
+
+                    <li> 2017 </li>
+                    <li> 2017</li>
+                </ul>
+            </h5>
+        </div>
+
+
+        <div class="grid-wrapper">
+
+            <div class="section-title">
+                <h2>Projects </h2>
+            </div>
+            <div class="section-subtitle">
+                <h3>MICA Branded Silk Scarves </h3>
+            </div>
+            <div class="section-content">
+                <h4> Designed fabric patterns for official school apparel
+                </h4>
+            </div>
+
+            <div class="section-subtitle">
+                <h3>MICA Fashion Show Set Designer </h3>
+            </div>
+            <div class="section-content">
+                <h4> Designed and built set for annual benefit fashion show </h4>
+            </div>
+        </div>
+
+
+
+        <div class="grid-wrapper">
+            <div class="section-title">
+                <h2> Skills </h2>
+            </div>
+            <div class="section-content">
+                <h4>
+                    <ul>
+                        <li>Mastery of Adobe Suite </li>
+                        <li>Knowledge of principles of design and branding</li>
+                        <li> CSS and HTML coding ability </li>
+                    </ul>
+                </h4>
+            </div>
+        </div>
+        <div class="section-dates-list">
+            <h5>
+                <ul>
+                    <li> 2016 - 2020</li>
+                </ul>
+            </h5>
+        </div>
+        <div class="grid-wrapper">
+            <div class="section-title">
+                <h2> Education </h2>
+            </div>
+            <div class="section-content">
+                <h4>
+                    <ul>
+                        <li>Maryland Institute College of Art (MICA)</li>
+                        <li>BFA graphic design candidate</li>
+                        <li>GPA: 3.87</li>
+
+                    </ul>
+                </h4>
+            </div>
+        </div>
+
+        <div class="section-dates">
+            <h5>
+                <ul>
+                    <li> 2016 - present</li>
+                    <li> 2015-2016 </li>
+                    <li> 2014-2016 </li>
+                </ul>
+            </h5>
+        </div>
+
+        <div class="grid-wrapper">
+            <div class="section-title">
+                <h2> Leadership </h2>
+            </div>
+            <div class="section-subtitle">
+                <h3>Tour Guide, MICA Office of Undergraduate Admissions </h3>
+            </div>
+            <div class="section-content">
+                <h4>Led tours for prospective students</h4>
+            </div>
+            <div class="section-subtitle">
+                <h3>President, Stuyvesant Theater Community</h3>
+            </div>
+            <div class="section-content">
+                <h4>Executive produced three shows.</h4>
+            </div>
+            <div class="section-subtitle">
+                <h3>President, Zine Club 2014-2016 </h3>
+            </div>
+            <div class="section-content">
+                <h4>Curated and produced bimonthly publications </h4>
+            </div>
+        </div>
+        <div class="section-dates-list">
+            <h5>
+                <ul>
+                    <li> 2016 - 2020</li>
+                    <li> 2016 - 2020</li>
+                    <li> 2016 - 2020</li>
+                    <li> 2016 - 2020</li>
+                    <li> 2017</li>
+                    <li> 2017 </li>
+                </ul>
+            </h5>
+        </div>
+        <div class="grid-wrapper">
+            <div class="section-title">
+                <h2> Awards / Achievements </h2>
+            </div>
+            <div class="section-content">
+                <h4>
+                    <ul>
+                        <li>Academic Excellence Scholarship, MICA </li>
+                        <li>Thalheimer Scholarship, MICA</li>
+                        <li>Creative Vision Award, MICA</li>
+                        <li>Deans Grant, MICA</li>
+                        <li>Exhibited work in juried MICA show</li>
+                        <li>Deans List </li>
+                    </ul>
+                </h4>
+            </div>
+        </div>
+
+
+
+        <div class="grid-wrapper">
+            <div class="section-title">
+                <h2> Contact </h2>
+            </div>
+            <div class="section-content">
+                <h4>
+                    <ul>
+
+                        <li>fcohen@mica.edu </li>
+                        <li>347-458-8860 </li>
+                    </ul>
+                </h4>
+            </div>
+        </div>
+    </div>
 </body>
+
+
 
 </html>
