--- a/poster/index.html
+++ b/poster/index.html
@@ -5,10 +5,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Document</title>
 </head>
 
 <body>
+    <div class="wrapper">
+
+        <div class="top">
+
+            <div class="text-1">
+                <h2> spatial design </h2>
+            </div>
+
+            <div class="text-2">
+                <h2> spring
+                    <br>2018 </h2>
+            </div>
+
+            <div class="text-3">
+                <h2> lecture
+                    <br>series </h2>
+            </div>
+
+            <div class="top-subtext">
+                <p> strangely familiar lecture series is presented by ma spacial design institute of architechture and
+                    design at kadk. it focuses on the interface between familiar and unfamiliar aesthetics within
+                    architechture, art, and design. </p>
+            </div>
+        </div>
+
+        <div class="side">
+
+            <div class="text-4">
+                <h3> 01.03.2018
+                    <br> 17.00, aud 2
+                    <br> do ho suh
+                    <br> home within home </h3>
+            </div>
+
+            <div class="text-5">
+                <h3>13.03.2018
+                    <br> 16.00, d101
+                    <br>mette birkedal bruun
+                    <br>unfamiliar familiar
+                    <br> spaces of early
+                    <br> modern devotion </h3>
+            </div>
+
+            <div class="text-6">
+                <h3> 20.03.2018
+                    <br> 160.00, d101
+                    <br> john glew
+                    <br> second thought
+                    <br> seeing the same-different
+                    <br> thing again, anew </h3>
+            </div>
+
+            <div class="text-7">
+                <h3> 11.04.2018.
+                    <br> 16.00, aud. 6
+                    <br> peter thule kristensen:
+                    <br> history without
+                    <br> historicism </h3>
+            </div>
+
+            <div class="text-8">
+                <h3> 25.04.2018
+                    <br>16.00, aud. 2
+                    <br>knapkiewicz & fickert
+                    <br> what's new? </h3>
+            </div>
+
+        </div>
+
+        <div class="hero">
+
+            <div class="text-9">st </div>
+            <div class="text-10">ra </div>
+            <div class="text-11">ng</div>
+            <div class="text-12">ely </div>
+            <div class="text-13">fa</div>
+            <div class="text-14">mil </div>
+            <div class="text-15">ia</div>
+            <div class="text-16">r </div>
+
+        </div>
+
+        <div class="image"> <img src="poster-pic.png">
+        </div>
+
+    </div>
 </body>
 
 </html>
