--- a/poster/index.html
+++ b/poster/index.html
@@ -22,12 +22,12 @@
 
             <div class="text-2">
                 <h2> spring
-                    <br>2018 </h2>
+                    2018 </h2>
             </div>
 
             <div class="text-3">
                 <h2> lecture
-                    <br>series </h2>
+                    series </h2>
             </div>
 
             <div class="top-subtext">
@@ -41,42 +41,42 @@
 
             <div class="text-4">
                 <h3> 01.03.2018
-                    <br> 17.00, aud 2
-                    <br> do ho suh
-                    <br> home within home </h3>
+                    17.00, aud 2
+                    do ho suh
+                    home within home </h3>
             </div>
 
             <div class="text-5">
                 <h3>13.03.2018
-                    <br> 16.00, d101
-                    <br>mette birkedal bruun
-                    <br>unfamiliar familiar
-                    <br> spaces of early
-                    <br> modern devotion </h3>
+                    16.00, d101
+                    mette birkedal bruun
+                    unfamiliar familiar
+                    spaces of early
+                    modern devotion </h3>
             </div>
 
             <div class="text-6">
                 <h3> 20.03.2018
-                    <br> 160.00, d101
-                    <br> john glew
-                    <br> second thought
-                    <br> seeing the same-different
-                    <br> thing again, anew </h3>
+                    160.00, d101
+                    john glew
+                    second thought
+                    seeing the same-different
+                    thing again, anew </h3>
             </div>
 
             <div class="text-7">
                 <h3> 11.04.2018.
-                    <br> 16.00, aud. 6
-                    <br> peter thule kristensen:
-                    <br> history without
-                    <br> historicism </h3>
+                    16.00, aud. 6
+                    peter thule kristensen:
+                    history without
+                    historicism </h3>
             </div>
 
             <div class="text-8">
                 <h3> 25.04.2018
-                    <br>16.00, aud. 2
-                    <br>knapkiewicz & fickert
-                    <br> what's new? </h3>
+                    16.00, aud. 2
+                    knapkiewicz & fickert
+                    what's new? </h3>
             </div>
 
         </div>
