changed font units

--- a/poster/index.html
+++ b/poster/index.html
@@ -17,12 +17,12 @@
         <div class="top">
 
             <div class="text-1">
-                <h2> spatial design </h2>
+                <h2> spatial <br> design </h2>
             </div>
 
             <div class="text-2">
                 <h2> spring
-                    2018 </h2>
+                    <br> 2018 <br> </h2>
             </div>
 
             <div class="text-3">
