--- a/poster/index.html
+++ b/poster/index.html
@@ -17,7 +17,7 @@
         <div class="top">
 
             <div class="text-1">
-                <h2> spatial <br> design </h2>
+                spatial <br> design
             </div>
 
             <div class="text-2">
