made image and top text work in media query

--- a/poster/index.html
+++ b/poster/index.html
@@ -21,13 +21,13 @@
             </div>
 
             <div class="text-2">
-                <h2> spring
-                    <br> 2018 <br> </h2>
+                spring
+                <br> 2018 <br>
             </div>
 
             <div class="text-3">
-                <h2> lecture
-                    series </h2>
+                lecture
+                series
             </div>
 
             <div class="top-subtext">
