--- a/poster/index.html
+++ b/poster/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/styles.scss">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Document</title>
 </head>
 
@@ -17,12 +17,12 @@
         <div class="top">
 
             <div class="text-1">
-                spatial <br> design
+                spatial design
             </div>
 
             <div class="text-2">
                 spring
-                <br> 2018 <br>
+                2018
             </div>
 
             <div class="text-3">
