line breaks not in html

--- a/poster/index.html
+++ b/poster/index.html
@@ -40,10 +40,11 @@
         <div class="side">
 
             <div class="text-4">
-                <h3> 01.03.2018
-                    17.00, aud 2
-                    do ho suh
-                    home within home </h3>
+                <h3><span> 01.03.2018
+                        17.00, </span>
+                    <span>aud 2</span>
+                    <span> do ho suh </span>
+                    <span>home within home </span> </h3>
             </div>
 
             <div class="text-5">
