--- a/poster/index.html
+++ b/poster/index.html
@@ -42,42 +42,42 @@
             <div class="text-4">
                 <h3><span> 01.03.2018
                         17.00, </span>
-                    <span>aud 2</span>
+                    <span> aud 2. </span>
                     <span> do ho suh </span>
                     <span>home within home </span> </h3>
             </div>
 
             <div class="text-5">
-                <h3>13.03.2018
-                    16.00, d101
-                    mette birkedal bruun
-                    unfamiliar familiar
-                    spaces of early
-                    modern devotion </h3>
+                <h3><span>13.03.2018
+                        16.00, d101 </span>
+                    <span>mette birkedal bruun</span>
+                    <span>unfamiliar familiar
+                        spaces of early
+                        modern devotion </span></h3>
             </div>
 
             <div class="text-6">
-                <h3> 20.03.2018
-                    160.00, d101
-                    john glew
-                    second thought
-                    seeing the same-different
-                    thing again, anew </h3>
+                <h3><span> 20.03.2018
+                        160.00, d101 </span>
+                    <span> john glew </span>
+                    <span>second thought</span>
+                    <span>seeing the same-different
+                        thing again, anew</span> </h3>
             </div>
 
             <div class="text-7">
-                <h3> 11.04.2018.
-                    16.00, aud. 6
-                    peter thule kristensen:
-                    history without
-                    historicism </h3>
+                <h3> <span>11.04.2018.
+                        16.00, aud. 6</span>
+                    <span> peter thule kristensen:</span>
+                    <span> history without
+                        historicism </span></h3>
             </div>
 
             <div class="text-8">
-                <h3> 25.04.2018
-                    16.00, aud. 2
-                    knapkiewicz & fickert
-                    what's new? </h3>
+                <h3> <span> 25.04.2018
+                        16.00, aud. 2</span>
+                    <span> knapkiewicz & fickert</span>
+                    <span> what's new? </span></h3>
             </div>
 
         </div>
