800-600 media query done

--- a/poster/index.html
+++ b/poster/index.html
@@ -42,7 +42,7 @@
             <div class="text-4">
                 <h3><span> 01.03.2018
                         17.00, </span>
-                    <span> aud 2. </span>
+                    <span> aud. 2 </span>
                     <span> do ho suh </span>
                     <span>home within home </span> </h3>
             </div>
