--- a/poster/index.html
+++ b/poster/index.html
@@ -17,17 +17,17 @@
         <div class="top">
 
             <div class="text-1">
-                spatial design
+                <h2>spatial design</h2>
             </div>
 
             <div class="text-2">
-                spring
-                2018
+                <h2>spring
+                    2018</h2>
             </div>
 
             <div class="text-3">
-                lecture
-                series
+                <h2>lecture
+                    series</h2>
             </div>
 
             <div class="top-subtext">
