--- a/poster/index.html
+++ b/poster/index.html
@@ -39,13 +39,11 @@
 
         <div class="side">
 
-            <div class="text-4">
-                <h3><span> 01.03.2018
-                        17.00, </span>
-                    <span> aud. 2 </span>
-                    <span> do ho suh </span>
-                    <span>home within home </span> </h3>
-            </div>
+            <h3 class="text-4"><span> 01.03.2018
+                    17.00, </span>
+                <span> aud. 2 </span>
+                <span> do ho suh </span>
+                <span>home within home </span> </h3>
 
             <div class="text-5">
                 <h3><span>13.03.2018
