dealing with image alignment

--- a/poster/index.html
+++ b/poster/index.html
@@ -45,51 +45,54 @@
                 <span> do ho suh </span>
                 <span>home within home </span> </h3>
 
-            <div class="text-5">
-                <h3><span>13.03.2018
-                        16.00, d101 </span>
-                    <span>mette birkedal bruun</span>
-                    <span>unfamiliar familiar
-                        spaces of early
-                        modern devotion </span></h3>
-            </div>
+            <h3 class="text-5">
+                <span>13.03.2018
+                    16.00, d101 </span>
+                <span>mette birkedal bruun</span>
+                <span>unfamiliar familiar
+                    spaces of early
+                    modern devotion </span></h3>
 
-            <div class="text-6">
-                <h3><span> 20.03.2018
-                        160.00, d101 </span>
-                    <span> john glew </span>
-                    <span>second thought</span>
-                    <span>seeing the same-different
-                        thing again, anew</span> </h3>
-            </div>
 
-            <div class="text-7">
-                <h3> <span>11.04.2018.
-                        16.00, aud. 6</span>
-                    <span> peter thule kristensen:</span>
-                    <span> history without
-                        historicism </span></h3>
-            </div>
+            <h3 class="text-6">
+                <span> 20.03.2018
+                    160.00, d101 </span>
+                <span> john glew </span>
+                <span>second thought</span>
+                <span>seeing the same-different
+                    thing again, anew</span> </h3>
 
-            <div class="text-8">
-                <h3> <span> 25.04.2018
-                        16.00, aud. 2</span>
-                    <span> knapkiewicz & fickert</span>
-                    <span> what's new? </span></h3>
-            </div>
+
+            <h3 class="text-7">
+                <span>11.04.2018.
+                    16.00, aud. 6</span>
+                <span> peter thule kristensen:</span>
+                <span> history without
+                    historicism </span></h3>
+
+
+            <h3 class="text-8">
+                <span> 25.04.2018
+                    16.00, aud. 2</span>
+                <span> knapkiewicz & fickert</span>
+                <span> what's new? </span></h3>
+
 
         </div>
 
         <div class="hero">
 
-            <div class="text-9">st </div>
-            <div class="text-10">ra </div>
-            <div class="text-11">ng</div>
-            <div class="text-12">ely </div>
-            <div class="text-13">fa</div>
-            <div class="text-14">mil </div>
-            <div class="text-15">ia</div>
-            <div class="text-16">r </div>
+
+            <h1 class="text-9">
+                <span>st</span>
+                <span>ra</span>
+                <span>ng</span>
+                <span>ly</span>
+                <span>fa</span>
+                <span>mil</span>
+                <span>ia</span>
+                <span>r</span>
+            </h1>
 
         </div>
 
