--- a/poster/index.html
+++ b/poster/index.html
@@ -16,25 +16,25 @@
 
         <div class="top">
 
-            <div class="text-1">
-                <h2>spatial design</h2>
-            </div>
+            <h2 class="text-1">
+                spatial design</h2>
 
-            <div class="text-2">
-                <h2>spring
-                    2018</h2>
-            </div>
 
-            <div class="text-3">
-                <h2>lecture
-                    series</h2>
-            </div>
+            <h2 class="text-2">
+                spring
+                2018</h2>
 
-            <div class="top-subtext">
-                <p> strangely familiar lecture series is presented by ma spacial design institute of architechture and
-                    design at kadk. it focuses on the interface between familiar and unfamiliar aesthetics within
-                    architechture, art, and design. </p>
-            </div>
+
+            <h2 class="text-3">
+                lecture
+                series</h2>
+
+
+            <p class="top-subtext">
+                strangely familiar lecture series is presented by ma spacial design institute of architechture and
+                design at kadk. it focuses on the interface between familiar and unfamiliar aesthetics within
+                architechture, art, and design. </p>
+
         </div>
 
         <div class="side">
