--- a/poster/index.html
+++ b/poster/index.html
@@ -1,14 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Document</title>
 </head>
 
 <body>
+
+    <div class="wrapper">
+
+        <div class="top">
+
+            <h2 class="text-1">
+                spatial design</h2>
+
+
+            <h2 class="text-2">
+                spring
+                2018</h2>
+
+
+            <h2 class="text-3">
+                lecture
+                series</h2>
+
+
+            <p class="top-subtext">
+                strangely familiar lecture series is presented by ma spacial design institute of architechture and
+                design at kadk. it focuses on the interface between familiar and unfamiliar aesthetics within
+                architechture, art, and design. </p>
+
+        </div>
+
+        <div class="side">
+
+            <h3 class="text-4"><span> 01.03.2018
+                    17.00, </span>
+                <span> aud. 2 </span>
+                <span> do ho suh </span>
+                <span>home within home </span> </h3>
+
+            <h3 class="text-5">
+                <span>13.03.2018
+                    16.00, d101 </span>
+                <span>mette birkedal bruun</span>
+                <span>unfamiliar familiar
+                    spaces of early
+                    modern devotion </span></h3>
+
+
+            <h3 class="text-6">
+                <span> 20.03.2018
+                    160.00, d101 </span>
+                <span> john glew </span>
+                <span>second thought</span>
+                <span>seeing the same-different
+                    thing again, anew</span> </h3>
+
+
+            <h3 class="text-7">
+                <span>11.04.2018.
+                    16.00, aud. 6</span>
+                <span> peter thule kristensen:</span>
+                <span> history without
+                    historicism </span></h3>
+
+
+            <h3 class="text-8">
+                <span> 25.04.2018
+                    16.00, aud. 2</span>
+                <span> knapkiewicz & fickert</span>
+                <span> what's new? </span></h3>
+
+
+        </div>
+
+        <div class="hero">
+
+
+            <h1 class="text-9">
+                <span>st</span>
+                <span>ra</span>
+                <span>ng</span>
+                <span>ly</span>
+                <span>fa</span>
+                <span>mil</span>
+                <span>ia</span>
+                <span>r</span>
+            </h1>
+
+        </div>
+
+        <div class="image"> <img src="poster-pic.png">
+        </div>
+
+    </div>
 </body>
 
 </html>
