made images show up (were not showing up bc were in subfolder)

--- a/lostcity/index.html
+++ b/lostcity/index.html
@@ -14,16 +14,14 @@
 <body>
 
     <div class="wrapper">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
 
-        <img src="logo.png" alt="lost city diner">
-        <img src="comic_print.png" alt="">
-        <img src="milkshake.png" alt="milkshake">
-        <img src="burger.png" alt="burger">
-        <img src="fries.png" alt="fries">
+        <div class="images">
+            <img src="images/logo.png" alt="lost city diner">
+            <img src="images/comic_print.png" alt="">
+            <img src="images/milkshake.png" alt="milkshake">
+            <img src="images/burger.png" alt="burger">
+            <img src="images/fries.png" alt="fries">
+        </div>
 
         <p> a cute and cozy diner with a
             retro sci-fi theme serving burgers, vegan fare, and old fashioned malted milkshakes.
