ordering of images and text on page

--- a/lostcity/index.html
+++ b/lostcity/index.html
@@ -14,30 +14,38 @@
 <body>
 
     <div class="wrapper">
+        <div class="logo"><img src="images/logo.png" alt="lost city diner"></div>
+        <img src="images/milkshake.png" alt="milkshake">
 
-        <div class="images">
-            <img src="images/logo.png" alt="lost city diner">
-            <img src="images/comic_print.png" alt="">
-            <img src="images/milkshake.png" alt="milkshake">
-            <img src="images/burger.png" alt="burger">
-            <img src="images/fries.png" alt="fries">
-        </div>
+
+
 
         <p> a cute and cozy diner with a
             retro sci-fi theme serving burgers, vegan fare, and old fashioned malted milkshakes.
         </p>
 
+        <img src="images/burger.png" alt="burger">
+
         <ul>
-            <h1>
-                <li>sunday</li>
-                <li>monday-thursday</li>
-                <li>friday-saturday</li>
-            </h1>
+            <h1>sunday</h1>
+            <h2>11am-11pm</h2>
+            <h1>monday - thursday</h1>
+            <h2> 5pm-11pm </h2>
+            <h1>friday - saturday</h1>
+            <h2>11am-3am</h2>
         </ul>
 
-        <h1>410-547-lost</h1>
-        <h1> 1730 N. Charles Street,
-            Baltimore, MD 21201 </h1>
+        <img src="images/fries.png" alt="fries">
+
+        <h2>410-547-lost</h2>
+        <h2> 1730 N. Charles Street,
+            Baltimore, MD 21201 </h2>
+
+
+
+
+
+
 
 
 
