--- a/lostcity/index.html
+++ b/lostcity/index.html
@@ -8,13 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Document</title>
+    <title>Lost_City</title>
 </head>
 
 <body>
 
     <div class="wrapper">
-        <div class="logo"><img src="images/logo.png" alt="lost city diner"></div>
+
+        <img src="images/logo.png" alt="lost city diner">
+
         <img src="images/milkshake.png" alt="milkshake">
 
 
