--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="resume/">resume</a></li>
         <li><a href="poster/">poster</a></li>
+        <li><a href="lostcity/">lost_city</a></li>
     </ul>
 </body>
 
