--- a/lostcity/src/index.html
+++ b/lostcity/src/index.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: layouts/default.njk
+title: did it work?
+---
 
-
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>Lost_City</title>
-</head>
-
-<body>
     {% include "_header.html" %}
 
     <div class="wrapper">
@@ -54,6 +45,4 @@
 
     </div>
 
-</body>
 
-</html>
