--- a/lostcity/index.html
+++ b/lostcity/index.html
@@ -15,19 +15,23 @@
 
     <div class="wrapper">
 
-        <img src="images/logo.png" alt="lost city diner">
+    <div class="text">
+        <img class= "logo" src="images/logo.png" alt="lost city diner">
+    </div class="text">
 
-        <img src="images/milkshake.png" alt="milkshake">
+        <img class="icons" src="images/milkshake.png" alt="milkshake">
 
 
 
-
+    <div class="text">
         <p> a cute and cozy diner with a
             retro sci-fi theme serving burgers, vegan fare, and old fashioned malted milkshakes.
         </p>
+    </div class="text">
 
-        <img src="images/burger.png" alt="burger">
+        <img class="icons" src="images/burger.png" alt="burger">
 
+    <div class="text">
         <ul>
             <h1>sunday</h1>
             <h2>11am-11pm</h2>
@@ -37,11 +41,15 @@
             <h2>11am-3am</h2>
         </ul>
 
-        <img src="images/fries.png" alt="fries">
+    </div class="text">
 
-        <h2>410-547-lost</h2>
-        <h2> 1730 N. Charles Street,
-            Baltimore, MD 21201 </h2>
+        <img class="icons" src="images/fries.png" alt="fries">
+
+   
+        <h3> 410-547-lost</h3>
+        <h3 class="address"> 1730 N. Charles Street,
+            Baltimore, MD 21201 </h3>
+    
 
 
 
