--- a/lostcity/src/index.html
+++ b/lostcity/src/index.html
@@ -1,27 +1,31 @@
 ---
 layout: layouts/default.njk
 title: top
+stylesheet: styles
 ---
 
 {% include "_header.html"%}
 
 
-<a href= "menu_page.html" > menus </a>
+
 
     <div class="wrapper">
 
+        <div class="assets">
+        <img class="milkshake" src="images/milkshake.png" alt="milkshake">
+        </div>
 
-        <img class="icons" src="images/milkshake.png" alt="milkshake">
 
 
-
-    <div class="text">
+    <div class="des">
         <p> a cute and cozy diner with a
             retro sci-fi theme serving burgers, vegan fare, and old fashioned malted milkshakes.
         </p>
-    </div class="text">
+    </div>
 
-        <img class="icons" src="images/burger.png" alt="burger">
+    <div class="assets">
+        <img class="burger" src="images/burger.png" alt="burger">
+    </div>
 
     <div class="text">
         <ul>
@@ -35,7 +39,9 @@ title: top
 
     </div class="text">
 
-        <img class="icons" src="images/fries.png" alt="fries">
+    <div class="assets">
+        <img class="fries" src="images/fries.png" alt="fries">
+    </div>
 
    
         <h3> 410-547-lost</h3>
