--- a/lostcity/src/menu_page.html
+++ b/lostcity/src/menu_page.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: layouts/default.njk
+title: top
+stylesheet: menu_page
 
+---
 
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/menu_page.css">
-  
-    <title>Menu</title>
-</head>
-
-<body>
 <div class="wrapper">
 
 <div class="helper">
@@ -45,5 +37,4 @@
     </div>
   
 
-</body>
-</html>
+
