--- a/lostcity/src/index.html
+++ b/lostcity/src/index.html
@@ -1,6 +1,6 @@
 ---
 layout: layouts/default.njk
-title: top
+title: home
 stylesheet: styles
 ---
 
@@ -9,10 +9,12 @@ stylesheet: styles
 
 
 
+
     <div class="wrapper">
 
         <div class="assets">
         <img class="milkshake" src="images/milkshake.png" alt="milkshake">
+        <img class="milkshake1" src="images/milkshake.png" alt="milkshake">
         </div>
 
 
@@ -25,7 +27,9 @@ stylesheet: styles
 
     <div class="assets">
         <img class="burger" src="images/burger.png" alt="burger">
-    </div>
+
+        <img class="burger1" src="images/burger.png" alt="burger">
+    </div> 
 
     <div class="text">
         <ul>
@@ -41,22 +45,10 @@ stylesheet: styles
 
     <div class="assets">
         <img class="fries" src="images/fries.png" alt="fries">
+        <img class="fries1" src="images/fries.png" alt="fries">
     </div>
+</div>
 
-   
-        <h3> 410-547-lost</h3>
-        <h3 class="address"> 1730 N. Charles Street,
-            Baltimore, MD 21201 </h3>
-    
-
-
-
-
-
-
-
-
-
-    </div>
+{% include "_footer.html"%}
 
 
