giving header own style sheet

--- a/lostcity/src/order_form.html
+++ b/lostcity/src/order_form.html
@@ -3,23 +3,47 @@ layout: layouts/default.njk
 title: order
 stylesheet: order_form
 ---
+
+{% include "_header.html"%}
+
 <div class="wrapper">
 <form class="order-form">
     <fieldset>
         
+        <label for="name">
+        <input id="name" type="name" placeholder="Name">
+        name </label>
 
-        <input type="name" placeholder="Name">
-        <input type="address" placeholder="Address">
-        <input type="card_number" placeholder="card number">
-        <input type="card_expiration" placeholder="expiration">
-        <input type="cvc" placeholder="cvc">
+        <label for="address">
+        <input id="address" type="address" placeholder="Address">
+        address </label>
+
+        <label for="card_type">
+        <select id="card_type">
+            <option>Visa</option>
+            <option>Mastercard</option>
+            <option>Discover</option>
+            <option>American Express</option>
+        </select>
+        card type</label>
+
+        <label for="card_number">
+        <input id="card_number" type="card_number" placeholder="card number"> card number </label>
+
+        <label for="card_expiration">
+        <input id="card_expiration" type="card_expiration" placeholder="expiration"> card expiration </label>
+        
+        <label for="cvc">
+        <input id="cvc" type="cvc" placeholder="cvc"> cvc </label>
 
 
-        <label for="remember">
-            <input id="remember" type="checkbox"> save this card
+        <label for="save">
+            <input id="save" type="checkbox">  save this card 
         </label>
 
-        <button type="submit" class="pure-button pure-button-primary">order</button>
+        <button type="submit" class="order_button">order</button>
     </fieldset>
 </form>
 </div>
+
+{% include "_footer.html"%}
