linking js to layouts/default

--- a/lostcity/src/index.html
+++ b/lostcity/src/index.html
@@ -13,8 +13,8 @@ stylesheet: styles
     <div class="wrapper">
 
         <div class="assets">
-        <img class="milkshake" src="images/milkshake.png" alt="milkshake">
-        <img class="milkshake1" src="images/milkshake.png" alt="milkshake">
+        <img class="assets__milkshake" src="images/milkshake.png" alt="milkshake">
+        <img class="assets__milkshake--1" src="images/milkshake.png" alt="milkshake">
         </div>
 
 
@@ -26,9 +26,9 @@ stylesheet: styles
     </div>
 
     <div class="assets">
-        <img class="burger" src="images/burger.png" alt="burger">
+        <img class="assets__burger" src="images/burger.png" alt="burger">
 
-        <img class="burger1" src="images/burger.png" alt="burger">
+        <img class="assets__burger--1" src="images/burger.png" alt="burger">
     </div> 
 
     <div class="text">
@@ -44,8 +44,8 @@ stylesheet: styles
     </div class="text">
 
     <div class="assets">
-        <img class="fries" src="images/fries.png" alt="fries">
-        <img class="fries1" src="images/fries.png" alt="fries">
+        <img class="assets__fries" src="images/fries.png" alt="fries">
+        <img class="assets__fries--1" src="images/fries.png" alt="fries">
     </div>
 </div>
 
