dealing with partials by moving things in folders

--- a/lostcity/src/index.html
+++ b/lostcity/src/index.html
@@ -1,10 +1,10 @@
 ---
 layout: layouts/default.njk
 title: home
-stylesheet: styles
+stylesheet: homepage
 ---
 
-{% include "_header.html"%}
+
 
 
 
@@ -49,6 +49,6 @@ stylesheet: styles
     </div>
 </div>
 
-{% include "_footer.html"%}
+
 
 
