delivery radio button

--- a/lostcity/src/404.html
+++ b/lostcity/src/404.html
@@ -8,18 +8,18 @@ stylesheet: 404
 <h1> 404 </h1>
 
     <div class="assets">
-        <img class="assets__milkshake" src="images/milkshake.svg" alt="milkshake">
-        <img class="assets__milkshake--1" src="images/milkshake.svg" alt="milkshake">
+        <img class="assets__milkshake" src="/images/milkshake.svg" alt="milkshake">
+        <img class="assets__milkshake--1" src="/images/milkshake.svg" alt="milkshake">
         </div>
 
     <div class="assets">
-        <img class="assets__burger" src="images/burger.svg" alt="burger">
-        <img class="assets__burger--1" src="images/burger.svg" alt="burger">
+        <img class="assets__burger" src="/images/burger.svg" alt="burger">
+        <img class="assets__burger--1" src="/images/burger.svg" alt="burger">
     </div> 
 
     <div class="assets">
-        <img class="assets__fries" src="images/fries.svg" alt="fries">
-        <img class="assets__fries--1" src="images/fries.svg" alt="fries">
+        <img class="assets__fries" src="/images/fries.svg" alt="fries">
+        <img class="assets__fries--1" src="/images/fries.svg" alt="fries">
     </div>
 
 </div>
