--- a/lostcity/src/index.html
+++ b/lostcity/src/index.html
@@ -2,6 +2,7 @@
 layout: layouts/default.njk
 title: home
 stylesheet: homepage
+tags: nav
 ---
 
 
@@ -11,6 +12,8 @@ stylesheet: homepage
 
 
     <div class="wrapper">
+        
+        
 
         <div class="assets">
         <img class="assets__milkshake" src="images/milkshake.svg" alt="milkshake">
@@ -20,7 +23,7 @@ stylesheet: homepage
 
 
     <div class="des">
-        <p> a cute and cozy diner with a
+        <p class="des__1"> a cute and cozy diner with a
             retro sci-fi theme serving burgers, vegan fare, and old fashioned malted milkshakes.
         </p>
     </div>
@@ -32,7 +35,7 @@ stylesheet: homepage
     </div> 
 
     <div class="text">
-        <ul>
+        <ul class="open">
             <h1>sunday</h1>
             <h2>11am-11pm</h2>
             <h1>monday - thursday</h1>
