--- a/lostcity/src/index.html
+++ b/lostcity/src/index.html
@@ -11,14 +11,14 @@ tags: nav
 
 
 
-    <div class="wrapper">
-        
-        
+<div class="wrapper">
 
-        <div class="assets">
-        <img class="assets__milkshake" src="images/milkshake.svg" alt="milkshake">
-        <img class="assets__milkshake--1" src="images/milkshake.svg" alt="milkshake">
-        </div>
+
+
+    <div class="assets">
+        <img src="images/milkshake.svg" class="assets__milkshake" alt="milkshake">
+
+    </div>
 
 
 
@@ -29,10 +29,10 @@ tags: nav
     </div>
 
     <div class="assets">
-        <img class="assets__burger" src="images/burger.svg" alt="burger">
+        <img src="images/burger.svg" class="assets__burger" alt="burger">
 
-        <img class="assets__burger--1" src="images/burger.svg" alt="burger">
-    </div> 
+
+    </div>
 
     <div class="text">
         <ul class="open">
@@ -47,11 +47,9 @@ tags: nav
     </div class="text">
 
     <div class="assets">
-        <img class="assets__fries" src="images/fries.svg" alt="fries">
-        <img class="assets__fries--1" src="images/fries.svg" alt="fries">
+        <img src="images/fries.svg" class="assets__fries" alt="fries">
+
+
+
     </div>
 </div>
-
-
-
-
