--- a/lostcity/src/index.html
+++ b/lostcity/src/index.html
@@ -20,7 +20,7 @@ date: 2000-01-01
         <img class="assets__milkshake--1" src="images/milkshake.svg" alt="milkshake">
     </div>
 
-
+    <!--make rotate div class-->
 
     <div class="des">
         <p> a cute and cozy diner with a
