radio button styling

--- a/lostcity/src/order_form.html
+++ b/lostcity/src/order_form.html
@@ -108,13 +108,13 @@ tags: nav
 		<div class="column__two">
 
 			<h6> delivery or pick up? </h6>
+			<div class="radio">
+				<input type="radio" id="delivery" name="dorp">
+				<label class="radio_buttons" for="delivery">delivery</label>
+				<input type="radio" id="pickup" name="dorp">
+				<label class="radio_buttons" for="pickup">pick up</label> </div>
 
-			<input type="radio" id="delivery" name="dorp">
-			<label class="radio_buttons" for="delivery">delivery</label>
-			<input type="radio" id="pickup" name="dorp">
-			<label class="radio_buttons" for="pickup">pick up</label>
-
-			<h6>card details</h6>
+			<h6 class="card_details">card details</h6>
 			<label for="card_number"> card number
 				<input id="card_number" type="text" placeholder="card number"> </label>
 
