commenting on code

--- a/lostcity/src/index.html
+++ b/lostcity/src/index.html
@@ -7,26 +7,21 @@ tags: nav
 date: 2000-01-01
 ---
 
-
-
-
-
-
-
 <div class="wrapper">
+
 
     <div class="assets">
         <img class="assets__milkshake" src="images/milkshake.svg" alt="milkshake">
         <img class="assets__milkshake--1" src="images/milkshake.svg" alt="milkshake">
     </div>
 
-    <!--make rotate div class-->
 
-    <div class="des">
+    <div class="text__description">
         <p> a cute and cozy diner with a
             retro sci-fi theme serving burgers, vegan fare, and old fashioned malted milkshakes.
         </p>
     </div>
+
 
     <div class="assets">
         <img class="assets__burger" src="images/burger.svg" alt="burger">
@@ -34,7 +29,8 @@ date: 2000-01-01
         <img class="assets__burger--1" src="images/burger.svg" alt="burger">
     </div>
 
-    <div class="text">
+
+    <div class="text__daysopen">
         <ul>
             <h1>sunday</h1>
             <h2>11am-11pm</h2>
@@ -43,11 +39,13 @@ date: 2000-01-01
             <h1>friday - saturday</h1>
             <h2>11am-3am</h2>
         </ul>
+    </div>
 
-    </div class="text">
 
     <div class="assets">
         <img class="assets__fries" src="images/fries.svg" alt="fries">
         <img class="assets__fries--1" src="images/fries.svg" alt="fries">
     </div>
+
+
 </div>
