--- a/lostcity/src/order_form.html
+++ b/lostcity/src/order_form.html
@@ -25,10 +25,6 @@ tags: nav
 
 
 
-
-
-
-
 			<h6>address</h6>
 			<label for="street"> street
 				<input id="street" type="text" placeholder="street"> </label>
@@ -97,12 +93,9 @@ tags: nav
 			<label for="special_instructions"> delivery instructions
 				<textarea name="special_instructions" rows="10" cols="20">
 
-</textarea> </label>
-
+			</textarea>
+			</label>
 		</div>
-
-
-
 
 
 		<div class="column__two">
@@ -141,29 +134,12 @@ tags: nav
 			</label>
 
 
-
-
-
-
-
 			<label for="tip"> add a tip
 				<input id="tip" type="text">
 			</label>
 
+			<button type="submit" class="order_button"> place order </button>
 
-
-
-
-
-
-
-
-			<a href="thank_you">
-				<button type="submit" class="order_button"> place order </button>
-			</a>
 		</div>
-
-
-
 	</form>
 </div>
